--- a/Ctrl_alt_defeat_2-hoor/package.json
+++ b/Ctrl_alt_defeat_2-hoor/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.9",
+    "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
