--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.9",
+    "dompurify": "^3.2.5",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -15,6 +17,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
